# openet-disalexi

./: .gitignore  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.py  tseb.py
assets/: alexi_zero_assets.ipynb  et_export_wrs2_image.py  playground.js  scene_image_wrs2_export.py  scene_image_wrs2_export_direct.py  ta_0p1k_wrs2_conus.ini  ta_10k_wrs2_conus.ini  ta_10k_wrs2_conus_v003.ini  ta_10k_wrs2_conus_v004.ini  ta_10k_wrs2_conus_v005.ini  ta_10k_wrs2_conus_v005_nlcd2016.ini  ta_10k_wrs2_conus_v005_nlcd2019.ini  ta_10k_wrs2_conus_v005a.ini  ta_10k_wrs2_conus_v005b.ini  ta_10k_wrs2_conus_v006_nlcd2016.ini  ta_10k_wrs2_conus_v006_nlcd2019.ini  ta_1k_wrs2_conus.ini  ta_1k_wrs2_conus_test.ini  ta_1k_wrs2_conus_v003.ini  ta_1k_wrs2_conus_v004.ini  ta_1k_wrs2_conus_v005.ini  ta_1k_wrs2_conus_v005_nlcd2016.ini  ta_1k_wrs2_conus_v005_nlcd2019.ini  ta_1k_wrs2_conus_v005a.ini  ta_1k_wrs2_conus_v005b.ini  ta_1k_wrs2_conus_v006_nlcd2016.ini  ta_1k_wrs2_conus_v006_nlcd2019.ini  ta_asset.ipynb  ta_conus.ini  ta_conus_daily.ini  ta_conus_wrs2_0p1k.ini  ta_conus_wrs2_10k.ini  ta_conus_wrs2_10k_a.ini  ta_conus_wrs2_10k_b.ini  ta_conus_wrs2_10k_c.ini  ta_conus_wrs2_1k.ini  ta_conus_wrs2_a.ini  ta_conus_wrs2_b.ini  ta_conus_wrs2_c.ini  ta_conus_wrs2_cv.ini  (+18 more)
assets/ancillary/: alexi_ancillary_assets.py
assets/insol/: unpack_multiband_assets.py
assets/insolation_daily_assets/: README.md  main.py
assets/mississippi/: ta_10k_wrs2_conus_v006_nlcd2019.ini  ta_1k_wrs2_conus_v006_nlcd2016.ini  ta_1k_wrs2_conus_v006_nlcd2019.ini
assets/old/: alexi_asset_shift.ipynb  alexi_zero_assets.ipynb  et_conus_wrs2_iter_0.ini  et_export_wrs2_image.py  ta_10k_wrs2_conus_v003.ini  ta_10k_wrs2_conus_v005_nlcd2016.ini  ta_1k_wrs2_conus_v003.ini  ta_asset.ipynb  ta_conus_daily.ini  ta_conus_wrs2_qm_a.ini  ta_conus_wrs2_qm_b.ini  ta_conus_wrs2_qm_c.ini  ta_conus_wrs2_qm_d.ini  ta_export_daily_image.py  ta_export_wrs2_image.py  ta_export_wrs2_image_qm.py  ta_iterative.txt  ta_wrs2_conus_v006_nlcd2019.ini  ta_wrs2_conus_v006_nlcd2021.ini
assets/ta_climo/: ta_climo_wrs2_conus_v006.ini  ta_climo_wrs2_export.py
assets/ta_combined/: ta_wrs2_conus_v006.ini  tair_image_wrs2_export.py
assets/ta_steps/: ta_10k_wrs2_conus_v006.ini  ta_10k_wrs2_conus_v006_nlcd2016.ini  ta_10k_wrs2_conus_v006_nlcd2019.ini  ta_1k_wrs2_conus_v006.ini  ta_1k_wrs2_conus_v006_nlcd2019.ini  (+1 more)
examples/: collection_interpolate.ipynb  collection_overpass.ipynb  image_mapping.ipynb  landsat_c1_sr_image.ipynb  landsat_c1_toa_image.ipynb  mexico_2015_collection_image.ipynb  mexico_2015_mosaic_image.ipynb  mexico_2015_single_image.ipynb  single_image.ipynb  tair_direct.ipynb
validation/: landsat_c1_toa_image.ipynb  landsat_pre_sr_image.ipynb  validation_asset_values.ipynb  validation_assets.ipynb
(+32 files in other folders)
