[project]
name = "openet-disalexi"
version = "0.1.0"
authors = [
    { name = "Yun Yang", email = "yun.yang@msstate.edu" },
    { name = "Martha Anderson", email = "martha.anderson@usda.gov" },
]
maintainers = [
    { name = "Yun Yang", email = "yun.yang@msstate.edu" },
    { name = "Charles Morton", email = "charles.morton@dri.edu" },
]
description = "Earth Engine based DisALEXI model"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["DisALEXI", "OpenET", "Earth Engine", "Evapotranspiration", "Landsat"]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api>=0.1.367",
    "openet-core>=0.4.0",
    "openet-landsat-lai>=0.2.0",
    # "openet-refet-gee>=0.2.0",
    "python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-disalexi"
# "Repository" = "https://github.com/Open-ET/openet-disalexi.git"
# "Documentation" = "https://github.com/Open-ET/openet-disalexi"
# "Bug Tracker" = "https://github.com/Open-ET/openet-disalexi"
# "Changelog" = "https://github.com/Open-ET/openet-disalexi"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
# include = ["openet*"]
exclude = ["assets*", "docs*", "examples*", "validation*"]
